/*
 * $Id: ChangeLog,v 1.2821 2004/04/22 12:01:05 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-22 16:04 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * ChangeLog
    ! Removed an accidental CVS conflict indicator.

2004-04-22 16:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/tbrwtext.prg
    ! Turned word-wrapping off.
  * source/rtl/teditor.prg
    ! Fixed individual line coloring (once again).

2004-04-22 17:10 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * source/rtl/tbrowse.prg
    ! Remove nSpacePre > 0 checking in ::Redrawheaders()
      (as suggested by Ath. Thanks.)

2004-04-22 13:20 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/teditor.prg
    * All the fixes offered by Eduardo Fernandez with little modifications and optimizations.
      Still more fixes. Now Insert/Overstike mode is exactly Clipper comaptible.
      In my experiments memoedit without wordwrap is behaving exactly like Clipper but
      for only one bug ( I am desperately after ), memoedit with wordwrap still have some
      differences which I hope will be covered soon.

    /* Phil - I am sorry that your fix has been overwritten, which was due to excessive
       merging of CVS updates, please re-fix it as I have lost old code.
    */

2004-04-21 09:36 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * source/rtl/tget.prg
    ! respect case of ::cPicture in New() method to achieve Clipper compatibility

2004-04-21 12:15 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/filesys.c
    ! hb_fsmkdir/hb_fschdir/hb_fsrmdir, not respecting _SET_FILECASE and _SET_DIRCASE,
    fixed bug reported by Marcelo Lombardo
  * source/rtl/memoline.c
    ! fix to me more clipper compatible,(file provided by Pritpal Bedi
